--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -14,6 +14,7 @@
                     </headerContent>
                     <content>
                         <mvc:XMLView viewName="sapui5.walkthrough.view.HelloPanel"/>
+                        <mvc:XMLView viewName="sapui5.walkthrough.view.InvoiceList"/>
                     </content>
                 </Page>
             </pages>
